On branch hw2  Changes to be committed: 	modified:   build.gradle 	new file:   keystore.p12 	modified:   src/main/java/edu/cmu/iccb/AWSConfiguration.java 	modified:   src/main/java/edu/cmu/iccb/Application.java 	modified:   src/main/java/edu/cmu/iccb/HomeController.java 	modified:   src/main/resources/sample-application.properties 	modified:   src/main/resources/templates/login.html
 Changes not staged for commit:
	deleted:    keystore.p12

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE")
+        
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE")
         classpath("io.spring.gradle:dependency-management-plugin:0.5.4.RELEASE")
     }
 }
@@ -42,7 +43,12 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("commons-io:commons-io:2.4")
     compile('com.amazonaws:aws-java-sdk-s3')
+    compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.security.oauth:spring-security-oauth2")
+    compile("org.springframework.security:spring-security-config")
     testCompile("junit:junit")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.springframework.security:spring-security-test")
 }
 
 task wrapper(type: Wrapper) {
