--- a/src/main/resources/sample-application.properties
+++ b/src/main/resources/sample-application.properties
@@ -10,3 +10,7 @@ cloud.aws.region= ${cloud.aws.region}
 
 # example : s3-bucket-test-1
 cloud.aws.s3.bucket=${cloud.aws.s3.bucket}
+
+# Hw2 configurations : Oauth
+cloud.github.credentials.ClientID=${cloud.github.credentials.ClientId}
+cloud.github.credentials.ClientS=cloud.github.credentials.ClientS}
