--- a/manifest.yml
+++ b/manifest.yml
@@ -2,3 +2,4 @@
 applications:
 - name: dohara-image-gallery-0.1.0
   path: ./build/libs/image-gallery-0.1.0.jar
+  buildpack: https://github.com/cloudfoundry/java-buildpack.git
