--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: java
 before_install:
 - chmod +x gradlew
+jdk:
+- oraclejdk8
 script: "./gradlew check"
 deploy:
   edge: true
   provider: cloudfoundry
   api: https://api.run.pivotal.io
   username: seijiohara@cmu.edu
+  password: $coobyDoo123
   organization: seijohara-cmu
   space: development
   on:
     repo: DanielSOhara27/Image-Gallery-Application
     branch: hw2
-jdk:
-- oraclejdk8
+
