--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: java
 jdk: oraclejdk8
 edge: true
-deploy:
-	provider: cloudfoundry
-	api: https://api.run.pivotal.io
-	username: seijohara@cmu.edu
-	password: $coobyDoo123
-	organization: seijiohara-cmu
-	space: development
+deploy: 
+  api: "https://api.run.pivotal.io"
+  organization: seijiohara-cmu
+  password: $coobyDoo123
+  provider: cloudfoundry
+  space: development
+  username: seijohara@cmu.edu
 on:
-	repo: DanielSOhara27/Image-Gallery-Application
-	branch: hw2
+  branch: hw2
+  repo: DanielSOhara27/Image-Gallery-Application
