--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ deploy:
   space: development
   username: seijohara@cmu.edu
 on:
- repo: DanielSOhara27/Image-Gallery-Application/tree/hw2
+ repo: DanielSOhara27/Image-Gallery-Application
+ branch: hw2
