--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: java
 jdk: oraclejdk8
-edge: true
-deploy: 
+deploy:
+  edge: true
   api: "https://api.run.pivotal.io"
   organization: seijiohara-cmu
-  password: $coobyDoo123
+  password: \$coobyDoo123
   provider: cloudfoundry
   space: development
   username: seijohara@cmu.edu
