--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: java
 jdk: oraclejdk8
 deploy:
-  edge: true
-  api: https://api.run.pivotal.io
-  organization: seijiohara-cmu
-  username: seijohara@cmu.edu
-  password: cloud123-CLASS
-  provider: cloudfoundry
-  space: development
-
-true:
-  repo: DanielSOhara27/Image-Gallery-Application
+ edge: true
+ api: https://api.run.pivotal.io
+ organization: seijiohara-cmu
+ username: seijiohara@cmu.edu
+ password: cloud123-CLASS
+ provider: cloudfoundry
+ space: development
+on:
+ repo: DanielSOhara27/Image-Gallery-Application
